# comfyui-backend

./: .env.example  .gitignore  README.md  docker-compose.db-viewer.yml  docker-compose.eralchemy.yml  pyproject.toml  requirements.txt
app/: config.py  db.py  flask_ui.py  main.py  models.py  schemas.py  security.py  seed.py  seeding.py  worker.py
app/routers/: __init__.py  admin.py  assets.py  auth.py  export.py  health.py  jobs.py  public.py  review.py  ui.py  users.py  workflows.py
app/services/: auth.py  comfy_client.py  model_downloader.py  model_requirements.py
docs/: AUTHENTICATION.md  DB_VIEWER.md  ERALCHEMY_PDF.md  assets-lifecycle.md  auth-frontend-integration.md  auth-integration-pipeline.md  auth-jwt.md  uml-mermaid.md  workflow-job-asset-requirements.md
schema-docs/: erd.dot
seed/prompts/: image_flux2_klein_text_to_image-ui.json  simple-image-to-3d-trellis-api.json  simple-image-to-3d-trellis-ui.json
tests/: test_access_control.py  test_auth.py  test_model_requirements.py
