[project]
name = "comfyui-wrapper-backend"
version = "0.1.0"
description = "ComfyUI wrapper backend (MVP)"
requires-python = ">=3.14"
dependencies = [
  "fastapi==0.135.1",
  "flask==3.1.0",
  "uvicorn==0.41.0",
  "sqlalchemy==2.0.47",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "httpx==0.28.1",
  "python-multipart==0.0.22",
  "passlib==1.7.4",
  "pyjwt==2.10.1",
  "uvloop>=0.22.1",
  "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
  "ruff",
  "mypy>=1.19.1",
  "pytest>=9.0.2",
  "pre-commit",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
# black-compatible defaults (double quotes, trailing commas)

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"app/flask_ui.py" = ["E501"]
"app/routers/ui.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
